Added two child node types for a carousel

--- a/src/main/resources/resources/carousel_en.properties
+++ b/src/main/resources/resources/carousel_en.properties
@@ -1,5 +1,5 @@
 #/src/main/resources/resources/carousel_en.properties
-#Tue Jun 14 16:50:35 EDT 2016
+#Wed Jun 15 09:27:49 EDT 2016
 jnt_carousel=Carousel
 jnt_carousel.autoPlay=Turn autoplay on or off
 jnt_carousel.autoPlayTime=Time in ms between autoplay transitions. (default\: 5000)
@@ -13,7 +13,8 @@ jnt_carousel.rewindNav=Rewind to the first item. (default\: checked)
 jnt_carousel.singleItem=Display a single item. (default\: unchecked)
 jnt_carouselImage=Carousel Image
 jnt_carouselImage.image=Image
+jnt_carouselImage.jcr_title=Name
 jnt_carouselText=Carousel Text
 jnt_carouselText.jcr_title=Title
-jnt_carouselText.quoteAuthor=Author, if the content is a quote
-jnt_carouselText.text=Text content
+jnt_carouselText.quoteAuthor=Name of the author, if the text content is a quote
+jnt_carouselText.text=Text
