--- a/src/main/resources/resources/carousel_en.properties
+++ b/src/main/resources/resources/carousel_en.properties
@@ -1,6 +1,11 @@
 #/src/main/resources/resources/carousel_en.properties
-#Wed Jun 15 09:27:49 EDT 2016
-jnt_carousel=Carousel
+#Wed Jun 15 10:23:46 EDT 2016
+jnt_carimage=carousel-image
+jnt_carimage.image=Image-3
+jnt_carimage.title=Title
+jnt_carousel=carousel
+jnt_carousel.__node__jnt@@carimage=*
+jnt_carousel.__node__jnt@@cartext=*
 jnt_carousel.autoPlay=Turn autoplay on or off
 jnt_carousel.autoPlayTime=Time in ms between autoplay transitions. (default\: 5000)
 jnt_carousel.id=Give this carousel a unique ID number, such as 1 for the first carousel, 2 for the second, etc.
@@ -13,8 +18,14 @@ jnt_carousel.rewindNav=Rewind to the first item. (default\: checked)
 jnt_carousel.singleItem=Display a single item. (default\: unchecked)
 jnt_carouselImage=Carousel Image
 jnt_carouselImage.image=Image
-jnt_carouselImage.jcr_title=Name
-jnt_carouselText=Carousel Text
+jnt_carouselImage.jcr_title=Title
+jnt_carouselText=carousel-text
 jnt_carouselText.jcr_title=Title
-jnt_carouselText.quoteAuthor=Name of the author, if the text content is a quote
-jnt_carouselText.text=Text
+jnt_carouselText.quoteAuthor=Quote Author (if applicable)
+jnt_carouselText.text=Text content
+jnt_cartext=carousel-text
+jnt_cartext.quoteAuthor=Quote Author (if applicable)
+jnt_cartext.text=Text Content
+jnt_cartext.title=Title
+jnt_test1=test1
+jnt_test2=test2
