Images now display properly, both in edit and non-edit mode

--- a/src/main/resources/resources/carousel_en.properties
+++ b/src/main/resources/resources/carousel_en.properties
@@ -1,7 +1,7 @@
 #/src/main/resources/resources/carousel_en.properties
-#Wed Jun 15 10:23:46 EDT 2016
+#Wed Jun 15 10:40:06 EDT 2016
 jnt_carimage=carousel-image
-jnt_carimage.image=Image-3
+jnt_carimage.image=Image
 jnt_carimage.title=Title
 jnt_carousel=carousel
 jnt_carousel.__node__jnt@@carimage=*
@@ -14,7 +14,7 @@ jnt_carousel.jcr_title=Name
 jnt_carousel.navigation=Show navigation buttons.
 jnt_carousel.pagination=Show pagination. (default\: checked)
 jnt_carousel.paginationNumbers=Show pagination numbers. (default\: unchecked)
-jnt_carousel.rewindNav=Rewind to the first item. (default\: checked)
+jnt_carousel.rewindNav=Rewind to first item upon reaching the end (default\: checked)
 jnt_carousel.singleItem=Display a single item. (default\: unchecked)
 jnt_carouselImage=Carousel Image
 jnt_carouselImage.image=Image
