--- a/src/main/resources/resources/carousel_pt.properties
+++ b/src/main/resources/resources/carousel_pt.properties
@@ -1,6 +1,7 @@
 #/src/main/resources/resources/carousel_pt.properties
-#Wed Jun 15 10:20:47 EDT 2016
+#Wed Jun 15 10:37:11 EDT 2016
 jnt_carimage=carimage
+jnt_carimage.image=image
 jnt_carousel=carousel
 jnt_carouselImage=carouselImage
 jnt_carouselText=test2
